.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Agency_Vacancy__c.object
<CustomObject>
    <description>Recruitment.
Junction object linking Vacancies with Recruitment Agencies</description>
    <fields>
        <fullName>xcdhcm__Agency__c</fullName>
        <label>Agency</label>
        <referenceTo>xcdhcm__Recruitment_Agency__c</referenceTo>
        <relationshipLabel>Agencies &amp; Vacancies</relationshipLabel>
        <relationshipName>Agencies_Vacancies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Agency_email__c</fullName>
        <label>Agency email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_No_of_candidates_per_vacancy__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Agency may submit applications from this number of candidates</inlineHelpText>
        <label>Max no. candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy__c</fullName>
        <label>Vacancy</label>
        <referenceTo>xcdhcm__Vacancy__c</referenceTo>
        <relationshipLabel>Agencies &amp; Vacancies</relationshipLabel>
        <relationshipName>Agencies_Vacancies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_job_title__c</fullName>
        <formula>xcdhcm__Vacancy__r.xcdhcm__Job_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy job title</label>
        <type>Text</type>
    </fields>
    <label>Agency &amp; Vacancy</label>
    <nameField>
        <displayFormat>AV-{0000}</displayFormat>
        <label>Agency &amp; Vacancy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies &amp; Vacancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>